tests/errors/test_36.xpp
// Duplicate type declarations

enum Foo { A, B }
enum Foo { C, D }
enum Bar { E, F }

fn main() void {}
